terraform/cloud-config-repo/terraform/network_acls/aws_sg_rule_allowed.tf
resource "aws_security_group_rule" "allowed" {
  type              = "egress"
  cidr_blocks       = ["192.168.1.0/24"]
}
